some chages in workspace api and get workspces fixed