@@ -1,5 +1,6 @@
 package com.solurion.eclipto.workspace.service;
 
+import com.solurion.eclipto.common.jwt.JwtClaimsManager;
 import com.solurion.eclipto.workspace.dto.CreateWorkspaceRequest;
 import com.solurion.eclipto.workspace.dto.UpdateWorkspaceRequest;
 import com.solurion.eclipto.workspace.dto.WorkspaceInfoDto;
@@ -15,12 +16,15 @@ import org.springframework.stereotype.Service;
 import org.springframework.web.server.ResponseStatusException;
 
 import java.util.List;
+import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 public class WorkspaceServiceImpl implements WorkspaceService {
     private final WorkspaceRepository workspaceRepository;
     private final WorkspaceMapper workspaceMapper;
+    private final JwtClaimsManager jwtClaimsManager;
 
     @Override
     public WorkspaceInfoDto getWorkspace(Long id) {
@@ -56,17 +60,35 @@ public class WorkspaceServiceImpl implements WorkspaceService {
 
     @Override
     public WorkspaceInfoDto createWorkspace(CreateWorkspaceRequest request) {
-        return workspaceMapper.toDto(workspaceRepository.save(workspaceMapper.toEntity(request)));
+        WorkspaceEntity workspaceEntity = workspaceMapper.toEntity(request);
+        WorkspaceInfoDto workspaceInfoDto = workspaceMapper.toDto(workspaceEntity);
+        workspaceEntity.setOwnerId(jwtClaimsManager.extractUserId());
+        workspaceRepository.save(workspaceEntity);
+        return workspaceInfoDto;
     }
 
     @Override
-    public List<WorkspaceInfoDto> getWorkspaces(@Nullable Long workspaceId) {
-        return workspaceRepository.findAll().stream().map(workspaceMapper::toDto).toList();
+    public List<WorkspaceInfoDto> getWorkspaces() {
+        List<WorkspaceEntity> workspaceEntities = workspaceRepository.findByOwnerId(jwtClaimsManager.extractUserId());
+        return workspaceMapper.entitiesToDtos(workspaceEntities);
     }
-
-    @Override
-    public List<WorkspaceInfoDto> getWorkspacesByUserId(Long userId) {
-        return workspaceRepository.findAll().stream().map(workspaceMapper::toDto).toList();
-    }
+////        return workspaceRepository.findAll().stream().map(workspaceMapper::toDto).toList();
+//        if (workspaceId == null) {
+//            return workspaceRepository.findAll().stream()
+//                    .map(workspaceMapper::toDto)
+//                    .collect(Collectors.toList());
+//        } else {
+//            Optional<WorkspaceEntity> workspaceOpt = workspaceRepository.findById(workspaceId);
+//            if (workspaceOpt.isEmpty()) {
+//                throw new ResponseStatusException(HttpStatus.FORBIDDEN, "Workspace with ID " + workspaceId + " not found");
+//            }
+//            WorkspaceEntity workspace = workspaceOpt.get();
+//            Long ownerId = workspace.getOwnerId();
+//            List<WorkspaceEntity> workspaces = workspaceRepository.findByOwnerId(ownerId);
+//            return workspaces.stream()
+//                    .map(workspaceMapper::toDto)
+//                    .collect(Collectors.toList());
+//        }
+//    }
 
 }
